# SENA-shallow-water

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  build.sh  build_and_test_GT4Py_stencils.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker_intel.yml  linux_gnu.yml  linux_intel.yml  macos_gnu.yml  macos_intel.yml
parm/: serialize_shallow_water.nl  serialize_test.nl  shallow_water.nl  shallow_water.yml  shallow_water_test.yml
src/: CMakeLists.txt
src/fortran/: CMakeLists.txt  module_shallow_water_model.f90  module_shallow_water_state.f90  shallow_water.f90  shallow_water_serialize.f90
src/python/: README.md  StencilFactory.py  foo.yml  old_update_interior.py  shallow_water.nl  shallow_water.nl.1step  shallow_water.py  shallow_water.yml  shallow_water_geometry.py  shallow_water_geometry_config.py  shallow_water_gt4py_config.py  shallow_water_model.py  shallow_water_model_adj.py  shallow_water_model_config.py  shallow_water_model_tl.py  shallow_water_movie.py  shallow_water_serialize.py  shallow_water_state.py  shallow_water_stencil_factory.py  shallow_water_stencils.py  shallow_water_visualization.py  stencils.py  swout_0000000.nc  swout_0000100.nc  update_boundaries.py  update_interior.py
src/python/output/: swout_0000000.nc  swout_0000734.nc
src/python/serialbox_data/: ArchiveMetaData-shallow_water.json  ArchiveMetaData-update_model.json  MetaData-shallow_water.json  MetaData-update_model.json
test/fortran/: CMakeLists.txt  test_shallow_water_adj_adv_nsteps.f90  test_shallow_water_model_adv_nsteps.f90  test_shallow_water_model_config_nlfile.f90  test_shallow_water_model_config_nlunit.f90  test_shallow_water_model_regression.f90  test_shallow_water_tl_adv_nsteps.f90
test/python/: setup_test.py  test_shallow_water_geometry.py  test_shallow_water_geometry_config.py  test_shallow_water_gt4py_config.py  test_shallow_water_model.py  test_shallow_water_model_adj.py  test_shallow_water_model_adv_nsteps.py  test_shallow_water_model_config.py  test_shallow_water_model_tl.py  test_shallow_water_state.py  test_shallow_water_state_read.py  test_shallow_water_state_scatter_gather.py  test_shallow_water_state_write.py  test_shallow_water_tl_adv_nsteps.py  test_utilities.py  test_visualization.py
test/test_input/: test_shallow_water_config.nl  test_shallow_water_config.yml
